Basically now the game works, it's missing a main menu, but game window has a timer for each question, and you can restart the game. There are also check against spam clicking the buttons during the questions.

--- a/public/style.css
+++ b/public/style.css
@@ -59,6 +59,19 @@ header, footer, html{
     height: 400px;
 }
 
+.game-info-window > .score-info{
+    font-size: 30pt;
+
+    width: 640px;
+    height: 400px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
 .game-info-window > #timer{
     position: absolute;
     background-color: transparent;
