--- a/public/style.css
+++ b/public/style.css
@@ -69,7 +69,6 @@ header, footer, html{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
 }
 
 .game-info-window > #timer{
@@ -167,9 +166,24 @@ header, footer, html{
     font-size: 28pt;
 }
 
-
-#game-answer-buttons-container > button:hover{
-    background-color: grey;
+#main-menu-container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
 }
+
+#main-menu-container > button{
+    flex: 0 0 auto;
+    width: 256px;
+    height: 50px;
+    border: none;
+
+    border-radius: 25px;
+
+    font-family: 'Dongle';
+    font-size: 28pt;
+}
+
 
 
