--- a/public/style.css
+++ b/public/style.css
@@ -2,13 +2,28 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
+}
+
+/* html, body {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+*, *::before, *::after {
+    box-sizing: border-box;
+} */
+
+body {
+    touch-action: none;
+    -webkit-overflow-scrolling: none;
 }
 
 html{
-    
     color: white;
-    overflow: hidden;
-
     font-family: 'Dongle';
 }
 
@@ -39,10 +54,6 @@ footer{
     align-items: center;
 
     color: white;
-
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
 
     font-family: 'Caveat';
 }
@@ -166,6 +177,10 @@ header, footer, html{
     font-size: 28pt;
 }
 
+#game-answer-buttons-container > button:hover{
+    background-color: #cfcfcf;
+}
+
 #main-menu-container{
     display: flex;
     align-items: center;
@@ -185,5 +200,33 @@ header, footer, html{
     font-size: 28pt;
 }
 
+#main-menu-container > button:hover{
+    background-color: #cfcfcf;
+}
 
+header > #back-button{
+    height: 64px;
+    width: 100px;
 
+    background-color: transparent;
+    border: none;
+}
+
+header > #back-button:hover{
+    background-color: #001229;
+}
+
+#about-info-window{
+    background-color: #002759;
+    border-radius: 40px;
+
+    width: 600px;
+    height: 360px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 22pt;
+    padding: 40px;
+}
